@@ -1,4 +1,4 @@
-* Sat Jul 1 2006 Brendan O'Dea <bod@optus.net> 2.2.0
+* Wed Aug 2 2006 Brendan O'Dea <bod@optus.net> 2.2.0
 - Only poll clifd if successfully bound.
 - Add "Practical VPNs" document from Liran Tal as Docs/vpn .
 - Add Multilink support from Khaled Al Hamwi.
@@ -9,6 +9,7 @@
 - Use result code AVP to set Acct-Terminate-Cause is disconnect cause
   AVP is not present.
 - Add radius_bind_{min,max} to simplify firewalling of RADIUS ports.
+- Fix sign problem with reporting of unknown RADIUS VSAs.
 
 * Tue Apr 18 2006 Brendan O'Dea <bod@optus.net> 2.1.18
 - Don't shutdown on TerminateReq, wait for CDN.
